# tensorflow-extend-framework

./: CMakeLists.txt  README.md
docker/: Dockerfile
docker/deploy/: Dockerfile
docker/develop/: Dockerfile
docker/test/: Dockerfile
examples/deepctr/: data.txt  deepctr.py
tef/: CMakeLists.txt
tef/core/: CMakeLists.txt  build.sh
tef/core/kernels/: example_op.cc  example_op.cu  example_op.cu.cc  example_op.h  ps_hash_pull.cc  ps_hash_pull_op.cc  ps_hash_pull_op.h  ps_hash_push.cc  ps_hash_push_op.cc  ps_hash_push_op.h  ps_pull_op.cc  ps_pull_op.h  ps_push_op.cc  ps_sparse_pull_op.cc  ps_sparse_pull_op.h  ps_sparse_push_op.cc  ps_sparse_push_op.h  zero_out_op.cc  zero_out_op.h
tef/core/kernels/ps_client/: ps_client.h  ps_client_dummy.cc  ps_client_dummy.h  ps_client_factory.cc  ps_client_factory.h
tef/core/ops/: example_ops.cc  ps_ops.cc
tef/python/: CMakeLists.txt  setup.py.in
tef/python/tef/embedding/: embedding.py
tef/python/tef/framework/: variable.py
tef/python/tef/ops/: __init__.py  embedding.py  variable.py
tef/python/tef/pywrap/: __init__.py  tef_core.py  tef_core_test.py
tef/python/tef/training/: __init__.py  optimizer.py
tef/python/tef/utils/: __init__.py  collections.py
tef/tef/core/kernels/: kernel_example.cc  kernel_example.cu.cc  kernel_example.h  ps_pull_op.cc
tef/tef/core/ops/: ps_ops.cc
